<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".app.screens.main.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayoutTitle1"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/gray_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultViewSacu"
            style="@style/TitleTextView"
            android:text="@string/sacu" />

        <TextView
            android:id="@+id/resultViewMassIncome"
            style="@style/TitleTextView"
            android:text="@string/income" />

        <TextView
            android:id="@+id/resultViewTime"
            style="@style/TitleTextView"
            android:text="@string/time" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextMassCost"
            style="@style/EditText"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/how_much_mass" />

        <ImageView
            android:id="@+id/imageViewMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:background="@drawable/background_edittext"
            android:foregroundGravity="center"
            android:src="@drawable/ahwassa" />

        <EditText
            android:id="@+id/editTextMassIncome"
            style="@style/EditText"
            android:layout_weight="1"
            android:hint="@string/income" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
