<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/sacuCostTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sacu_cost"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/settingsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton5320"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mass_icon"
                android:drawableEnd="@drawable/with_fabricators"
                android:drawablePadding="8dp"
                android:text="@string/_5320"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton6450"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mass_icon"
                android:drawableEnd="@drawable/wichout_fabricators"
                android:drawablePadding="8dp"
                android:text="@string/_6450"
                android:textColor="@color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/sacuCostDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sacu_cost_details"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>