<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_uef"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sacuCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sacu_cost"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <RadioGroup
        android:id="@+id/settingsRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/sacuCostTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sacuCostTextView"
        app:layout_constraintTop_toTopOf="@+id/sacuCostTextView">


        <RadioButton
            android:id="@+id/radioButton5320"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/mass_icon"
            android:drawablePadding="8dp"
            android:text="@string/_5320" />

        <RadioButton
            android:id="@+id/radioButton6450"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableEnd="@drawable/mass_icon"
            android:drawablePadding="8dp"
            android:text="@string/_6450" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>