<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/resultItem"
    android:layout_width="match_parent"
    android:layout_height="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/sacu" />

            <TextView
                android:id="@+id/resultViewSacu"
                style="@style/ItemTitleTextView"
                android:text="@string/sacu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/mass" />

            <TextView
                android:id="@+id/resultViewMassIncome"
                style="@style/ItemTitleTextView"
                android:text="@string/income" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timeImageView"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:id="@+id/resultViewTime"
                style="@style/ItemTitleTextView"
                android:text="@string/time" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>